created html and css. Next step: create and test operations functions

--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
 <body>
     <main class="calculatorContainer">
         <!-- implmement icons -->
-        <table>
+        <table class="tableContainer">
             <tr>
-                <td class="display">0</td>
+                <td class="display" colspan = "4">0</td>
             </tr>
             <tr>
-                <td>AC</td>
+                <td colspan = "3" class="firstRowButtons">AC</td>
                 <!-- <td></td> -->
                 <!-- <td></td> -->
-                <td>/</td>
+                <td class="operationButton">/</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>8</td>
                 <td>9</td>
-                <td>x</td>
+                <td class="operationButton">x</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>5</td>
                 <td>6</td>
-                <td>-</td>
+                <td class="operationButton">-</td>
             </tr>
             <tr>
                 <td>1</td>
                 <td>2</td>
                 <td>3</td>
-                <td>+</td>
+                <td class="operationButton">+</td>
             </tr>
             <tr>
-                <td>0</td>
-                <td>.</td>
-                <td>=</td>
+                <td colspan = "3" class="zeroButton">0</td>
+                <!-- <td>.</td> -->
+                <td class="operationButton equalsButton" >=</td>
             </tr>
         </table>
     </main>
