--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator (vanilla js)</title>
-    <script src="script.js"></script>
-    <script src=""></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,33 +16,33 @@
                 <td class="display" colspan = "4">0</td>
             </tr>
             <tr>
-                <td colspan = "3" class="firstRowButtons">AC</td>
+                <td colspan = "3" class="firstRowButtons" onclick="allClearHandle()">AC</td>
                 <!-- <td></td> -->
                 <!-- <td></td> -->
                 <td class="operationButton">/</td>
             </tr>
             <tr>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
+                <td class="number">7</td>
+                <td class="number">8</td>
+                <td class="number">9</td>
                 <td class="operationButton">x</td>
             </tr>
             <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
+                <td class="number">4</td>
+                <td class="number">5</td>
+                <td class="number">6</td>
                 <td class="operationButton">-</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
+                <td class="number">1</td>
+                <td class="number">2</td>
+                <td class="number">3</td>
                 <td class="operationButton">+</td>
             </tr>
             <tr>
-                <td colspan = "3" class="zeroButton">0</td>
-                <!-- <td>.</td> -->
-                <td class="operationButton equalsButton" >=</td>
+                <td class="number zeroButton" colspan = "2">0</td>
+                <td class="number dot">.</td>
+                <td class="equalsButton">=</td>
             </tr>
         </table>
     </main>
