added ac functionality

--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator (vanilla js)</title>
+    <title>Calculator (vanilla js) by Cinthya Ayala</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="calculatorContainer">
-        <!-- implmement icons -->
         <table class="tableContainer">
             <tr>
                 <td class="display" colspan = "4">0</td>
             </tr>
             <tr>
-                <td colspan = "3" class="firstRowButtons" onclick="allClearHandle()">AC</td>
-                <!-- <td></td> -->
-                <!-- <td></td> -->
+                <td colspan = "3" class="acButton">AC</td>
                 <td class="operationButton">/</td>
             </tr>
             <tr>
